--- a/src/app/components/layout/side-nav/side-nav.component.html
+++ b/src/app/components/layout/side-nav/side-nav.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar vh-100 p-3 text-white" [ngClass]="{ collapsed: isCollapsed }">
+<div class="sidebar p-3 text-white vh-100" [ngClass]="{ collapsed: isCollapsed }">
   <i (click)="toggleSidebar()" class="toggle-icon fs-4" [ngClass]="{
       'bi bi-arrow-right-circle': isCollapsed,
       'bi bi-arrow-left-circle': !isCollapsed
