--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column h-100">
+<div class="d-flex flex-column">
   <div class="d-flex flex-grow-1">
     <app-side-nav></app-side-nav>
     <div class="content-area flex-grow-1">
