--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-body { 
-    overflow-y: hidden !important;
-  }
+body {
+  background-color: rgba(170, 170, 170, 0.2);
+}
