--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,4 +1,8 @@
-<div class="d-flex flex-column">
+<div>
+  <app-home></app-home>
+</div>
+
+<!--<div class="d-flex flex-column">
   <div class="d-flex flex-grow-1">
     <app-side-nav></app-side-nav>
     <div class="content-area flex-grow-1">
@@ -6,4 +10,4 @@
       <app-content></app-content>
     </div>
   </div>
-</div>
+</div>-->
