--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
         </section>
-        <section class="bg-light pb-5">
+        <section class="bg-gray pb-5">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12 mt-4" *ngFor="let info of infoList; let i = index">
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="card shadow-sm border-0 rounded-3 mt-5 text-center py-3">
-                    <p>Still can't find what you're looking for? Contact Us</p>
+                    <p>Still can't find what you're looking for? <span>Contact Us</span></p>
                 </div>
             </div>
         </section>
