--- a/src/app/components/layout/side-nav/side-nav.component.scss
+++ b/src/app/components/layout/side-nav/side-nav.component.scss
@@ -1,6 +1,6 @@
   .sidebar {
     width: 200px;
-    background-color: #131E3A;
+    background-color: #1E3F66;
     transition: all 0.3s ease;
 
     &.collapsed {
