API integration Setup

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,13 @@
 body {
   background-color: rgba(170, 170, 170, 0.2);
 }
+
+a {
+  text-decoration: none !important;
+  color: #1E3F66 !important;
+}
+
+button {
+  background-color: #1E3F66 !important;
+  color: #fff !important;
+}
