--- a/src/app/components/main/summary/summary.component.html
+++ b/src/app/components/main/summary/summary.component.html
@@ -36,13 +36,35 @@
                 </div>
             </div>
         </div>
-        <div class="row g-2 mt-3">
-            <div class="col-8">
-                <app-line-chart></app-line-chart>
-            </div>
-            <div class="col-4 card">
-                <app-radial-ring></app-radial-ring>
-            </div>
+    </div>
+    <div class="row g-2 mt-3">
+        <div class="col-8">
+            <app-line-chart></app-line-chart>
+        </div>
+        <div class="col-4 card">
+            <app-radial-ring></app-radial-ring>
         </div>
     </div>
+    <div class="mt-4">
+        <h5>Top Issues</h5>
+        <div class="table-responsive">
+            <table class="table table-bordered table-striped">
+                <thead class="thead-light">
+                    <tr>
+                        <th>Column 1</th>
+                        <th>Column 2</th>
+                        <th>Column 3</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let item of tableData">
+                        <td>{{ item.column1 }}</td>
+                        <td>{{ item.column2 }}</td>
+                        <td>{{ item.column3 }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
 </div>
