--- a/src/app/components/main/summary/summary.component.html
+++ b/src/app/components/main/summary/summary.component.html
@@ -51,9 +51,9 @@
             <table class="table table-bordered table-striped">
                 <thead class="thead-light">
                     <tr>
-                        <th>Column 1</th>
-                        <th>Column 2</th>
-                        <th>Column 3</th>
+                        <th>Website URL</th>
+                        <th>Failure Rate</th>
+                        <th>Scan Status</th>
                     </tr>
                 </thead>
                 <tbody>
