table package change

--- a/src/app/components/data-table/data-table.component.scss
+++ b/src/app/components/data-table/data-table.component.scss
@@ -1,12 +1,4 @@
-ngx-datatable.bootstrap {
-    font-size: 14px;
-}
-
-ngx-datatable.bootstrap .datatable-header {
-    background-color: #007bff;
-    color: white;
-}
-
-ngx-datatable.bootstrap .datatable-body {
-    background-color: #f8f9fa;
+.k-grid {
+    max-width: 100%;
+    overflow-x: auto;
 }
