--- a/src/app/components/data-table/data-table.component.html
+++ b/src/app/components/data-table/data-table.component.html
@@ -1,37 +1,15 @@
-<div class="container mt-4">
-    <h5>{{this.tableTitle}}</h5>
-    <div class="table-responsive">
-        <table class="table table-bordered table-striped">
-            <thead class="thead-light">
-                <tr>
-                    <th>URL</th>
-                    <th>Status</th>
-                    <th>Rule ID</th>
-                    <th>Guideline</th>
-                    <th>WCAGPrinciple</th>
-                    <th>Severity</th>
-                    <th>HTML</th>
-                    <th>BugSummary</th>
-                    <th>User Impact</th>
-                    <th>Expected Result</th>
-                    <th>Recommendation</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let item of tableData">
-                    <td>{{ item.website_url }}</td>
-                    <td>{{item.status}}</td>
-                    <td>{{item.subcategory_id}}</td>
-                    <td>{{item.guideline}}</td>
-                    <td>{{item.wcag_principle}}</td>
-                    <td>{{item.severity}}</td>
-                    <td>{{item.html}}</td>
-                    <td>{{item.bug_summary}}</td>
-                    <td>{{item.user_impact}}</td>
-                    <td>{{item.expected_result}}</td>
-                    <td>{{item.recommendation}}</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+<div class="container mt-2">
+    <kendo-grid [data]="tableData" [filterable]="true" [filter]="filter" (filterChange)="filterChange($event)">
+        <kendo-grid-column field="website_url" title="URL"></kendo-grid-column>
+        <kendo-grid-column field="status" title="Status"></kendo-grid-column>
+        <kendo-grid-column field="subcategory_id" title="Rule ID"></kendo-grid-column>
+        <kendo-grid-column field="guideline" title="Guideline"></kendo-grid-column>
+        <kendo-grid-column field="wcag_principle" title="WCAGPrinciple"></kendo-grid-column>
+        <kendo-grid-column field="severity" title="Severity"></kendo-grid-column>
+        <kendo-grid-column field="html" title="HTML"></kendo-grid-column>
+        <kendo-grid-column field="bug_summary" title="Bug Summary"></kendo-grid-column>
+        <kendo-grid-column field="user_impact" title="User Impact"></kendo-grid-column>
+        <kendo-grid-column field="expected_result" title="Expected Result"></kendo-grid-column>
+        <kendo-grid-column field="recommendation" title="Recommendation"></kendo-grid-column>
+    </kendo-grid>
 </div>
