--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ a {
   color: #1E3F66 !important;
 }
 
-button {
+.btn-primary {
   background-color: #1E3F66 !important;
   color: #fff !important;
 }
