--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,6 @@
 <div class="container d-flex justify-content-center align-items-center vh-100">
     <div class="card p-4 shadow" style="width: 100%; max-width: 400px;">
+        <img src="assets/Continually-full-logo.jpg" />
         <h3 class="text-center">Login</h3>
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <div class="form-group mb-3">
@@ -20,7 +21,7 @@
                     Password is required (min 6 characters).
                 </small>
             </div>
-            <button class="btn w-100" type="submit">
+            <button class="btn btn-primary w-100" type="submit">
                 Login
             </button>
             <div class="text-center mt-3">
