--- a/src/app/components/shared/table/table.component.html
+++ b/src/app/components/shared/table/table.component.html
@@ -1,11 +1,31 @@
-<div>
-    <kendo-grid #myGrid [class]="scrollClass" [kendoGridBinding]="gridData1" [pageSize]="10" [sortable]="true"
-        [pageable]="true" [filterable]="true">
-        <!-- "boolean" | "text" | "numeric" | "date"' -->
+<section>
+    <div class="d-flex justify-content-between align-items-center">
+        <div>
+            <h5>{{gridTitle}}</h5>
+        </div>
+        <div>
+            <mat-icon [matMenuTriggerFor]="colors_menu">more_vert</mat-icon>
+
+            <mat-menu #colors_menu="matMenu">
+                <div *ngFor="let colm of FinColumns">
+                    <button mat-menu-item (click)="selectColor($event, colm.id)">
+                        <mat-icon *ngIf="!colm.checkBox"
+                            [class.empty]="colm.checkBox">check_box_outline_blank</mat-icon>
+                        <mat-icon *ngIf="colm.checkBox" [class.checked]="!colm.checkBox"
+                            class="red">check_box</mat-icon>
+                        {{ colm.viewValue }}
+                    </button>
+                </div>
+            </mat-menu>
+        </div>
+    </div>
+
+    <kendo-grid #myGrid [class]="scrollClass" [kendoGridBinding]="gridData" [pageSize]="10" [sortable]="true"
+        [pageable]="true" [filterable]="true" class="mt-3">
         <ng-container *ngFor="let col of FinColumns">
             <kendo-grid-column *ngIf="col.checkBox" [field]="col.name" [title]="col.viewValue" [width]="col.width"
                 [filterable]="col.filterable" [filter]="col.filter" [format]="col.format" [locked]="col.locked">
             </kendo-grid-column>
         </ng-container>
     </kendo-grid>
-</div>
+</section>
