--- a/src/app/components/layout/content/content.component.html
+++ b/src/app/components/layout/content/content.component.html
@@ -1,3 +1,3 @@
-<div class="overflow-auto feature">
+<!--<div class="overflow-auto feature">
     <router-outlet></router-outlet>
-</div>
+</div>-->
