--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,27 +1,31 @@
 <div class="container d-flex justify-content-center align-items-center vh-100">
     <div class="card p-4 shadow" style="width: 100%; max-width: 400px;">
-        <img src="assets/Continually-full-logo.jpg" />
         <h3 class="text-center">Login</h3>
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <div class="form-group mb-3">
-                <label for="username">Email</label>
-                <input type="email" id="username" class="form-control" formControlName="username"
-                    placeholder="Enter your email" />
-                <small *ngIf="loginForm.controls['username'].touched && loginForm.controls['username'].invalid"
-                    class="text-danger">
-                    Valid email is required.
-                </small>
+                <mat-form-field appearance="outline" class="w-100">
+                    <mat-label>Email</mat-label>
+                    <input matInput type="email" id="username" formControlName="username"
+                        placeholder="Enter your email" />
+                    <mat-error *ngIf="loginForm.controls['username'].touched && loginForm.controls['username'].invalid">
+                        Valid email is required.
+                    </mat-error>
+                </mat-form-field>
             </div>
             <div class="form-group mb-3">
-                <label for="password">Password</label>
-                <input type="password" id="password" class="form-control" formControlName="password"
-                    placeholder="Enter your password" />
-                <small *ngIf="loginForm.controls['password'].touched && loginForm.controls['password'].invalid"
-                    class="text-danger">
-                    Password is required (min 6 characters).
-                </small>
+                <mat-form-field appearance="outline" class="w-100">
+                    <mat-label>Password</mat-label>
+                    <input matInput [type]="hidePassword ? 'password' : 'text'" id="password" formControlName="password"
+                        placeholder="Enter your password" />
+                    <mat-icon matSuffix class="password-icon" (click)="togglePasswordVisibility()">
+                        {{ hidePassword ? 'visibility_off' : 'visibility' }}
+                    </mat-icon>
+                    <mat-error *ngIf="loginForm.controls['password'].touched && loginForm.controls['password'].invalid">
+                        Password is required (min 6 characters).
+                    </mat-error>
+                </mat-form-field>
             </div>
-            <button class="btn btn-primary w-100" type="submit">
+            <button mat-raised-button color="primary" class="w-100" type="submit">
                 Login
             </button>
             <div class="text-center mt-3">
