login and register style

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -42,7 +42,7 @@
             </div>
 
             <!-- Register Button -->
-            <button mat-raised-button color="primary" class="w-100" type="submit">
+            <button mat-raised-button class="w-100 btn-primary" type="submit">
                 Register
             </button>
 
