--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -25,7 +25,7 @@
                     </mat-error>
                 </mat-form-field>
             </div>
-            <button mat-raised-button color="primary" class="w-100" type="submit">
+            <button mat-raised-button class="w-100 btn-primary" type="submit">
                 Login
             </button>
             <div class="text-center mt-3">
