--- a/src/app/components/layout/side-nav/side-nav.component.html
+++ b/src/app/components/layout/side-nav/side-nav.component.html
@@ -1,16 +1,38 @@
-<div class="sidebar p-3 text-white vh-100" [ngClass]="{ collapsed: isCollapsed }">
-  <i (click)="toggleSidebar()" class="toggle-icon fs-4" [ngClass]="{
+<div class="sidebar d-flex flex-column text-white vh-100" [ngClass]="{ collapsed: isCollapsed }">
+  <!-- Toggle Button -->
+  <i (click)="toggleSidebar()" class="fs-5 mt-3 mx-3" [ngClass]="{
       'bi bi-arrow-right-circle': isCollapsed,
       'bi bi-arrow-left-circle': !isCollapsed
     }"></i>
-  <ul class="list-unstyled mt-4" [ngClass]="{ 'd-none': isCollapsed, 'd-block': !isCollapsed }">
-    <li>
-      <a href="#" class="nav-link text-white">
-        <i class="bi-columns-gap me-3"></i> Overview
+
+  <!-- Menu Items -->
+  <ul class="list-unstyled mt-4 flex-grow-1">
+    <li *ngFor="let menu of menuItems" class="menu">
+      <!-- Parent Menu -->
+      <a class="nav-link d-flex align-items-center text-white" [ngClass]="{ 'active-parent': menu.isActive }"
+        (click)="toggleParent(menu)">
+        <i class="{{ menu.icon }} me-3"></i>
+        <span *ngIf="!isCollapsed">{{ menu.title }}</span>
+        <i *ngIf="menu.children.length && !isCollapsed" class="ms-auto bi"
+          [ngClass]="menu.isOpen ? 'bi-chevron-up' : 'bi-chevron-down'"></i>
       </a>
+
+      <!-- Child Menu -->
+      <ul *ngIf="menu.children.length && menu.isOpen && !isCollapsed" class="list-unstyled ms-4">
+        <li *ngFor="let child of menu.children">
+          <a class="nav-link text-white d-flex align-items-center" [ngClass]="{ 'active-child': child.isActive }"
+            (click)="activateChild(menu, child)">
+            <i class="{{ child.icon }} me-3"></i>
+            <span>{{ child.title }}</span>
+          </a>
+        </li>
+      </ul>
     </li>
   </ul>
-  <div (click)="logout()">
-    Logout
+
+  <!-- Logout -->
+  <div class="mb-3 mx-3" (click)="logout()">
+    <i class="bi-box-arrow-right me-3"></i>
+    <span *ngIf="!isCollapsed">Logout</span>
   </div>
 </div>
