--- a/src/app/components/main/summary/summary.component.html
+++ b/src/app/components/main/summary/summary.component.html
@@ -47,6 +47,13 @@
     </div>
     <div class="mt-4">
         <h5>Top Issues</h5>
+        <div class="btn-toolbar mb-2 w-100">
+            <div class="btn-group w-100">
+                <button type="button" class="btn issue_btn">By Website</button>
+                <button type="button" class="btn issue_btn">By Webpages</button>
+                <button type="button" class="btn issue_btn">By Checkpoints</button>
+            </div>
+        </div>
         <div class="table-responsive">
             <table class="table table-bordered table-striped">
                 <thead class="thead-light">
