--- a/src/app/components/main/summary/summary.component.scss
+++ b/src/app/components/main/summary/summary.component.scss
@@ -58,6 +58,13 @@
     border: none;
 }
 
+.issue_btn {
+    background-color: #ffffff;
+    border: 1px solid #d3d3d3;
+}
+
+
+
 
 @media (max-width: 768px) {
     .dropdown_container {
