admin page changes

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -3,7 +3,7 @@
     <app-side-nav></app-side-nav>
     <div class="content-area flex-grow-1">
       <app-header></app-header>
-      <div class="overflow-auto feature">
+      <div class="feature">
         <router-outlet></router-outlet>
       </div>
     </div>
