--- a/src/app/components/layout/side-nav/side-nav.component.html
+++ b/src/app/components/layout/side-nav/side-nav.component.html
@@ -31,8 +31,12 @@
   </ul>
 
   <!-- Logout -->
-  <div class="mb-3 mx-3" (click)="logout()">
-    <i class="bi-box-arrow-right me-3"></i>
-    <span *ngIf="!isCollapsed">Logout</span>
-  </div>
+  <section class="lh-lg nav-btm">
+    <div>Help</div>
+    <div>Contact Us</div>
+    <div (click)="logout()">
+      <i class="bi-box-arrow-right me-3"></i>
+      <span *ngIf="!isCollapsed">Logout</span>
+    </div>
+  </section>
 </div>
