--- a/src/app/components/main/summary/summary.component.html
+++ b/src/app/components/main/summary/summary.component.html
@@ -49,15 +49,24 @@
         <h5>Top Issues</h5>
         <div class="btn-toolbar mb-2 w-100">
             <div class="btn-group w-100">
-                <button type="button" class="btn issue_btn">By Website</button>
-                <button type="button" class="btn issue_btn">By Webpages</button>
-                <button type="button" class="btn issue_btn">By Checkpoints</button>
+                <button type="button" class="btn issue_btn" [class.active]="activeButton === 'website'"
+                    (click)="setActiveButton('website')">
+                    By Website
+                </button>
+                <button type="button" class="btn issue_btn" [class.active]="activeButton === 'webpages'"
+                    (click)="setActiveButton('webpages')">
+                    By Webpages
+                </button>
+                <button type="button" class="btn issue_btn" [class.active]="activeButton === 'checkpoints'"
+                    (click)="setActiveButton('checkpoints')">
+                    By Checkpoints
+                </button>
             </div>
         </div>
         <div class="table-responsive">
-            <table class="table table-bordered table-striped">
+            <table class="table table-bordered">
                 <thead class="thead-light">
-                    <tr>
+                    <tr class="text-center bg-head">
                         <th>Website URL</th>
                         <th>Failure Rate</th>
                         <th>Scan Status</th>
@@ -65,9 +74,12 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let item of tableData">
-                        <td>{{ item.column1 }}</td>
-                        <td>{{ item.column2 }}</td>
-                        <td>{{ item.column3 }}</td>
+                        <td>{{ item.website_url }}</td>
+                        <td class="text-center"> {{ calculatePercentage(item.total_checks, item.total_passed, 1) }}</td>
+                        <td class="text-center">
+                            <i *ngIf="item.status === 'Completed'" class="bi bi-check-circle"></i>
+                            <i *ngIf="item.status === 'In Progress'" class="bi bi-hourglass-split"></i>
+                        </td>
                     </tr>
                 </tbody>
             </table>
