--- a/src/app/components/main/summary/summary.component.scss
+++ b/src/app/components/main/summary/summary.component.scss
@@ -1,5 +1,6 @@
 .content {
-    background-color: rgba(128, 128, 128, 0.19);
+    //background-color: rgba(128, 128, 128, 0.19);
+    background-color: #f1f1f1;
 
     .dropdown_container {
         text-align: left;
@@ -63,6 +64,14 @@
     border: 1px solid #d3d3d3;
 }
 
+.btn.issue_btn.active {
+    background-color: #1E3F66;
+    color: white;
+}
+
+.bg-head>th {
+    background-color: #d1d1d1 !important;
+}
 
 
 
