--- a/src/app/components/main/summary/summary.component.html
+++ b/src/app/components/main/summary/summary.component.html
@@ -9,34 +9,33 @@
     <div class="row g-1 mt-1">
         <div class="col-12 col-md-4 col-sm-6 d-flex justify-content-center" *ngFor="let card of cardData">
             <div class="custom_card shadow-sm">
-                <div class="card-body row">
-                    <div class="col-2">
-                        <span class="icon-placeholder"><i class="{{card.icon}}"></i></span>
+                <div class="card-body d-flex flex-column justify-content-between h-100">
+                    <div class="d-flex align-items-center mb-3">
+                        <span class="icon-placeholder me-2"><i class="{{ card.icon }}"></i></span>
+                        <h5 class="card-title m-0 flex-grow-1">{{ card.title }}</h5>
                     </div>
-                    <div class="col-10">
-                        <h5 class="card-title">{{ card.title }}</h5>
-                        <div class="row">
-                            <div class="col">
-                                <p *ngIf="isString(card.count)" class="card-text">{{ card.count }}</p>
-                                <ul *ngIf="isObject(card.count)" class="list-unstyled card-text">
-                                    <li *ngFor="let key of objectKeys(card.count)">
-                                        {{ card.count[key] }}
-                                    </li>
-                                </ul>
-                                <p class="card-text">{{ card.checked_desc }}</p>
-                            </div>
-                            <div class="col text-center">
-                                <strong class="card-score">{{ card.score }}</strong>
-                            </div>
+                    <div class="d-flex justify-content-between align-items-start">
+                        <div class="content-left flex-grow-1">
+                            <p *ngIf="isString(card.count)" class="card-text mb-1">{{ card.count }}</p>
+                            <ul *ngIf="isObject(card.count)" class="list-unstyled card-text mb-1">
+                                <li *ngFor="let key of objectKeys(card.count)">
+                                    {{ card.count[key] }}
+                                </li>
+                            </ul>
+                            <p class="card-text mb-0">{{ card.checked_desc }}</p>
                         </div>
-                        <p class="card-bottom text-end">
-                            {{ card.change }} this week
-                        </p>
+                        <strong class="card-score text-center">{{ card.score }}</strong>
                     </div>
+                    <p class="card-bottom text-end mb-0">
+                        {{ card.change }} this week
+                    </p>
                 </div>
             </div>
         </div>
     </div>
+
+
+
     <div class="row g-2 mt-3">
         <div class="col-8">
             <app-line-chart></app-line-chart>
